--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,15 @@ services:
   sdk-api:
     build:
       context: .
+      secrets:
+        - aws_access_key_id
+        - aws_secret_access_key
     ports:
       - "3000:3000"
 
     
+secrets:
+  aws_access_key_id:
+    environment: "AWS_ACCESS_KEY_ID"
+  aws_secret_access_key:
+    environment: "AWS_SECRET_ACCESS_KEY"
