fix: docker configuration (#3)
* fix: docker configuration

* fix: docker configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,21 @@ services:
   sdk-api:
     build:
       context: .
+      secrets:
+        - aws_access_key_id
+        - aws_secret_access_key
     ports:
       - "3000:3000"
+    environment:
+      - CLIENT_ID=${CEDE_CLIENT_ID}
+      - SECRET_API_KEY=${CEDE_SECRET_API_KEY}
+      - REDIS_URL=${REDIS_URL}
+      - PORT=3000
+      - NODE_ENV=production
 
     
+secrets:
+  aws_access_key_id:
+    environment: "AWS_ACCESS_KEY_ID"
+  aws_secret_access_key:
+    environment: "AWS_SECRET_ACCESS_KEY"
