--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
 		"test": "vitest"
 	},
 	"dependencies": {
+		"@cedelabs-private/sdk": "^1.14.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
 		"mongoose": "^8.7.1",
-		"redis": "^4.7.0",
-		"@cedelabs-private/sdk": "^1.14.0"
+		"object-sizeof": "^2.6.5",
+		"redis": "^4.7.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
