--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"test": "vitest"
 	},
 	"dependencies": {
-		"@cedelabs-private/sdk": "^2.1.1",
+		"@cedelabs-private/sdk": "^2.8.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
 		"mongoose": "^8.7.1",
@@ -25,5 +25,9 @@
 		"tsx": "^4.19.1",
 		"typescript": "^5.6.2",
 		"vitest": "^2.1.3"
+	},
+	"volta": {
+		"node": "23.3.0",
+		"yarn": "1.22.19"
 	}
 }
