--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
 		"test": "vitest"
 	},
 	"dependencies": {
-		"@cedelabs-private/sdk": "^2.8.0",
+		"@cedelabs-private/sdk": "2.8.1",
+		"body-parser": "^1.20.3",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
+		"express-openapi-validator": "^5.4.2",
 		"mongoose": "^8.7.1",
+		"node": "^23.7.0",
 		"object-sizeof": "^2.6.5",
-		"redis": "^4.7.0"
+		"redis": "^4.7.0",
+		"tsoa": "^6.6.0",
+		"v18": "^1.0.2"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
