feat: graceful shutdown, health endpoint

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
 	"license": "MIT",
 	"type": "module",
 	"scripts": {
-		"dev": "tsx watch src/index",
-		"build": "npx pkgroll",
+		"dev": "tsoa spec && tsoa routes && tsx watch src/index",
+		"build": "tsoa spec && tsoa routes && npx pkgroll",
 		"start": "node dist/index.js",
 		"test": "vitest"
 	},
 	"dependencies": {
-		"@cedelabs-private/sdk": "2.8.1",
+		"@cedelabs-private/sdk": "2.9.0",
 		"body-parser": "^1.20.3",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
