--- a/.github/workflows/upload_image.yml
+++ b/.github/workflows/upload_image.yml
@@ -13,6 +13,7 @@ on:
         type: string
 
 env:
+  AWS_REGION: eu-west-1 # to retrieve the SDK from AWS CodeArtifact
   GCP_ACR_REGISTRY: ${{ vars.GCP_ACR_REGISTRY }}
   GCP_PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
   GCP_ACR_REPOSITORY: ${{ vars.GCP_ACR_REPOSITORY }}
@@ -41,6 +42,13 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2
         with:
           version: '>= 363.0.0'
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
       
       - name: Login to GCP Artifact registry
         run: gcloud auth configure-docker ${{ env.GCP_ACR_REGISTRY }}
