--- a/.github/workflows/upload_image.yml
+++ b/.github/workflows/upload_image.yml
@@ -18,6 +18,8 @@ env:
   GCP_PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
   GCP_ACR_REPOSITORY: ${{ vars.GCP_ACR_REPOSITORY }}
   GCP_ACR_IMAGE_NAME: ${{ vars.GCP_ACR_IMAGE_NAME }}-sdk_v${{ github.event.inputs.sdk_version }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 permissions:
   contents: read
@@ -43,12 +45,6 @@ jobs:
         with:
           version: '>= 363.0.0'
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
       
       - name: Login to GCP Artifact registry
         run: gcloud auth configure-docker ${{ env.GCP_ACR_REGISTRY }}
