--- a/.github/workflows/upload_image.yml
+++ b/.github/workflows/upload_image.yml
@@ -18,8 +18,6 @@ env:
   GCP_PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
   GCP_ACR_REPOSITORY: ${{ vars.GCP_ACR_REPOSITORY }}
   GCP_ACR_IMAGE_NAME: ${{ vars.GCP_ACR_IMAGE_NAME }}-sdk_v${{ github.event.inputs.sdk_version }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 permissions:
   contents: read
@@ -65,6 +63,9 @@ jobs:
           context: ./
           push: true
           file: ./Dockerfile
+          args: |
+            AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
           tags: |
             ${{ env.GCP_ACR_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_ACR_REPOSITORY }}/${{ env.GCP_ACR_IMAGE_NAME }}:${{ github.sha }}
             ${{ env.GCP_ACR_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_ACR_REPOSITORY }}/${{ env.GCP_ACR_IMAGE_NAME }}:latest
