--- a/.github/workflows/upload_image.yml
+++ b/.github/workflows/upload_image.yml
@@ -63,7 +63,7 @@ jobs:
           context: ./
           push: true
           file: ./Dockerfile
-          args: |
+          build-args: |
             AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
           tags: |
