chore: format openapi validator errors + additional env vars

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,34 @@
-PORT=
-CLIENT_ID=
+
+# If you want to use Redis cache instead of in-memory cache, you can set the REDIS_URL
 REDIS_URL=
-NODE_ENV=
-SECRET_API_KEY=
-DEMO=true
+# If you want to use MongoDB instead of in-memory cache, you can set the MONGODB_URL
+# It's cheaper than Redis, but not as fast
+MONGODB_URL=
+
+# REAL will require you to provide x-exchange-api-key and x-exchange-api-secret headers
+# MOCK won't require to pass any exchange credentials
+MODE=REAL
+
+# If you want to build the SDK API locally, you need to have the access to the NPM package of the SDK
+# You can find credentials in the tech integration guide
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
+# Used for HMAC authentication, to verify the request signature
+# You can leave it empty if you don't need an authentication
+# SECRET_API_KEY=ccaf48b2-c932-4dac-91ce-8acb0c28b18c
+
+# Your client id from the tech integration guide
+CLIENT_ID=sdk-***
+
+# The proxy URL to be used for exchanges requiring IP whitelisting
+# /!\ Make sure to add a slash at the end of the URL
+PROXY_URL=https://<your-proxy-url>/
+
+# The port to run the server on
+APP_PORT=3000
+
+# The verbose mode
+# - "v": Additional logs.
+# - "vv": Prints all network requests/responses and logs.
+VERBOSE=
