--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"mongoose": "^8.7.1",
 		"node": "^23.7.0",
 		"object-sizeof": "^2.6.5",
+		"prom-client": "^15.1.3",
 		"redis": "^4.7.0",
 		"tsoa": "^6.6.0",
 		"v18": "^1.0.2",
