--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"test": "vitest"
 	},
 	"dependencies": {
-		"@cedelabs-private/sdk": "2.9.0",
+		"@cedelabs-private/sdk": "2.15.0",
 		"body-parser": "^1.20.3",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
@@ -21,7 +21,8 @@
 		"object-sizeof": "^2.6.5",
 		"redis": "^4.7.0",
 		"tsoa": "^6.6.0",
-		"v18": "^1.0.2"
+		"v18": "^1.0.2",
+		"winston": "^3.17.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
