feat: add ip pool size config to increase requests throughput

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ CLIENT_ID=sdk-***
 # /!\ Make sure to add a slash at the end of the URL
 PROXY_URL=https://<your-proxy-url>/
 
+# The number of unique IPs in your proxy pool. This is used to scale the rate limits for exchanges
+# that limit by IP (like Binance). Default is 1.
+IP_POOL_SIZE=2
+
 # The port to run the server on
 APP_PORT=3000
 
